--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <body>
+      <h1> Hello, my name is Mary Mae A. Quinio </h1>
+      <h5> Welcome to my Kubernetes application! </h5>
+    </body>
+  </head>
+</html>
